--- a/src/Blogs/Blogs.css
+++ b/src/Blogs/Blogs.css
@@ -1395,7 +1395,7 @@
   display: block;
   flex-basis: 100%;
 
-  padding: 42px;
+  padding: 16px;
 
   box-sizing: border-box;
 }
@@ -1429,7 +1429,7 @@
 
 @media only screen and (min-width: 960px) {
   .Blog-grid-image {
-    flex-basis: 33.333%;
+    flex-basis: 27.333%;
   }
 }
 
@@ -1519,7 +1519,7 @@
   font-family: "roboto";
   width: 100%;
   display: flex;
-  padding: 120px;
+ 
 
   justify-content: center;
   /* height: 100vh; */
@@ -1529,9 +1529,9 @@
 width: 80%;
 padding: 20px;
 display: flex;
-margin-top: 50px;
+
 flex-direction: column;
-background-color: lavender;
+background-color:#e8e8e8;
 }
 .BlogDetail_height {
   font-size: 20px;
@@ -1572,6 +1572,7 @@ background-color: lavender;
   height: 89vh;
   position: absolute;
   width: 100%;
+  background: linear-gradient(29deg, #00011fe0 27%, #23a55bbd 97%);
 }
 .background_Blogdetail_img {
   background-position: center;
@@ -1581,9 +1582,9 @@ background-color: lavender;
     width: 100%;
     padding: 20px;
     display: flex;
-    margin-top: 50px;
+
     flex-direction: column;
-    background-color: lavender;
+   
 }
 .Blogs_detail {
   font-family: "roboto";
@@ -1623,9 +1624,9 @@ background-color: lavender;
     width: 100%;
     padding: 20px;
     display: flex;
-    margin-top: 50px;
+
     flex-direction: column;
-    background-color: lavender;
+
 }
 .height2_blogdetail{
   font-size: 30px;
@@ -1640,9 +1641,9 @@ background-color: lavender;
     width: 100%;
     padding: 20px;
     display: flex;
-    margin-top: 50px;
+
     flex-direction: column;
-    background-color: lavender;
+
 }
 }
 @media only screen and (max-width: 1392px) {
