--- a/src/Services/Services.css
+++ b/src/Services/Services.css
@@ -539,6 +539,28 @@ font-family: 'roboto';
 color: black;
 cursor: pointer;
 }
+.Service1_button:hover{
+  background-color: #444545;
+  transition: 0.6s;
+  color: white;
+}
+.Service2_button:hover{
+  background-color: #444545;
+  transition: 0.6s;
+  color: white;
+
+}
+.Service3_button:hover{
+  background-color: #444545;
+  transition: 0.6s;
+  color: white;
+}
+.Service4_button:hover{
+  background-color: #444545;
+  transition: 0.6s;
+  color: white;
+}
+
 @media only screen and (max-width: 1223px) {
   .Service1_div
 {
