--- a/src/CaseStudies/CaseStudies.css
+++ b/src/CaseStudies/CaseStudies.css
@@ -1,31 +1,30 @@
 .rec.rec-arrow {
   border-radius: 0;
-  background-color: green;  
+  background-color: rgb(35, 165, 91);  
 }
 
 
 
 .rec.rec-dot{
   visibility: hidden;
-
 }
 
 .rec.rec-dot_active {
   visibility: hidden;
-  background: green;
+  background: rgb(35, 165, 91);
   border: #444545;
   box-shadow: none;
-  color: green;
+  color: rgb(35, 165, 91);
 }
 .rec.rec-dot_active:hover {
-  background: green;
+  background:rgb(35, 165, 91);
   border: #444545;
   box-shadow: none;
-  color: green;
+  color: rgb(35, 165, 91);
 }
 .rec.rec-arrow.rec-arrow-right:hover{
   border-radius: 50%;
-  background-color: green;
+  background-color: rgb(35, 165, 91);
 
 }
 .rec.rec-arrow.rec-arrow-right{
@@ -35,12 +34,12 @@
 }
 .rec.rec-arrow.rec-arrow-left{
   border-radius: 50%;
-  background-color: none;
+  background-color: rgb(35, 165, 91);
 
 }
 .rec.rec-arrow.rec-arrow-left:hover{
   /* border-radius: 50%; */
-  background-color: green;
+  background-color: rgb(35, 165, 91);
 }
 .background_casestudies{
 
@@ -69,11 +68,11 @@
   background-color: #626363;
   color: white;
   padding: 1rem;
-  height: 250px;
+  height: 365px;
   display: flex;
   border-radius: 8px;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: space-around;
   align-items: center;
   text-align: center; 
 }
@@ -107,6 +106,7 @@ border: 1px solid rgb(34, 153, 88);
   max-width: 1200px;
   margin: 0 auto;
   display: grid;
+  padding-top: 12px;
   gap: 1rem;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 }
@@ -256,7 +256,7 @@ flex-direction: column;
 justify-content: space-around;
 padding: 20px;
 align-items: center;
-  height: 270px;
+  height: 324px;
   width: 100%;
   background-color: #626363;
   color: #fff;
@@ -285,7 +285,7 @@ align-items: center;
       justify-content: space-around;
       
       align-items: center;
-          height: 270px;
+          height: 360px;
         
           width: 100%;
           background-color: #626363;
@@ -317,7 +317,7 @@ align-items: center;
       justify-content: space-around;
       
       align-items: center;
-          height: 270px;
+
         
           width: 100%;
           background-color: #626363;
@@ -348,8 +348,6 @@ align-items: center;
       justify-content: space-around;
       
       align-items: center;
-          height: 290px;
-        
           width: 100%;
           font-size: 11px;
           background-color: #626363;
@@ -370,6 +368,7 @@ align-items: center;
            margin: 30px auto;
            /* background-color: red; */
          }
+   
   }
   @media (max-width: 421px){
     .Carousel2_upper
@@ -383,7 +382,7 @@ align-items: center;
       justify-content: space-around;
       
       align-items: center;
-          height: 270px;       
+         
           width: 100%;
           font-size: 11px;
           background-color: #626363;
@@ -418,7 +417,7 @@ align-items: center;
       justify-content: space-around;
       
       align-items: center;
-          height: 270px;
+        
         
           width: 100%;
           font-size: 11px;
@@ -455,7 +454,7 @@ align-items: center;
       justify-content: space-around;
       
       align-items: center;
-          height: 270px;
+   
         
           width: 100%;
           font-size: 11px;
