--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -132,7 +132,7 @@ table {
 
 .img {
   height: 89vh;
-  background-image: url("../image/bannerr.svg");
+  background-image: url("../image/banner.svg");
   background-repeat: no-repeat;
   background-size: cover;
   opacity: 1;
