--- a/src/Blogs/Blogs.css
+++ b/src/Blogs/Blogs.css
@@ -1636,6 +1636,7 @@ background-color:#e8e8e8;
   width: 580px;
   align-self: center;
   margin-top: 20px;
+  padding: 30px;
 
 }
 .blogdetail_second {
