--- a/src/index.css
+++ b/src/index.css
@@ -313,8 +313,7 @@ background-color: #FFFFF9;
 }
 
 .chat_container {
-  position: absolute;
-
+  position: fixed;
   flex-direction: column;
   justify-content: space-between;
   background: #FFFFFF;
@@ -322,10 +321,11 @@ background-color: #FFFFF9;
   height: 400px;
   width: 230px;
   left: 80%;
-  top:50%
+  z-index: 222;
+  top: 50%;
 
 }
-@media screen  and (max-width: 1600px){
+/* @media screen  and (max-width: 1600px){
   .chat_container {
     left: 75%;
     top:50%;
@@ -382,7 +382,7 @@ background-color: #FFFFF9;
         }
         } 
   
-
+ */
 
 
 
@@ -549,6 +549,21 @@ button:focus {
 
 .textContainer h1 {
   margin-bottom: 0px;
+}
+.scrollbutton{
+  background-color: rgb(255, 255, 255);
+  width: 50px;
+  height: 50px;
+  text-align: center;
+  border-radius: 100px;
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  /* transition: background-color 0.3s ease 0s, opacity 0.5s ease 0s, visibility 0.5s ease 0s; */
+  opacity: 3;
+  /* visibility: hidden; */
+border: none;
+  cursor: pointer;
 }
 
 
